Fixed the colo-container from overlapping the element with "landing" class.

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
+  z-index: 30;
   top: 0;
   left: 0;
 }
